AC_PREREQ([2.69])

AC_INIT([fastnrt], [1.0], [c.blundell@gatsby.ucl.ac.uk])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CC
AC_CHECK_HEADERS([string.h])

PKG_CHECK_MODULES([DEPS], [glib-2.0 >= 2.30 gsl >= 1.0])

AC_ARG_ENABLE(debug,
AS_HELP_STRING([--enable-debug],
               [enable debugging, default: no]),
[case "${enableval}" in
             yes) debug=true ;;
             no)  debug=false ;;
             *)   AC_MSG_ERROR([bad value ${enableval} for --enable-debug]) ;;
esac],
[debug=false])
AM_CONDITIONAL(DEBUG, test x"$debug" = x"true")

AC_ARG_ENABLE(profile,
AS_HELP_STRING([--enable-profile],
               [enable profiling, default: no]),
[case "${enableval}" in
             yes) profile=true ;;
             no)  profile=false ;;
             *)   AC_MSG_ERROR([bad value ${enableval} for --enable-profile]) ;;
esac],
[profile=false])
AM_CONDITIONAL(PROFILE, test x"$profile" = x"true")

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

